Signed-off-by: ljb729613920 <liujiabin1212@outlook.com>

--- a/app/Admin/Views/Article/index.html
+++ b/app/Admin/Views/Article/index.html
@@ -70,7 +70,7 @@
             <{foreach $data as $v}>
             <tr>
                 <td><input type="checkbox" name="ids" id="ids" value="<{$v.a_id}>" /></td>
-                <td><{$v.a_category}></td>
+                <td><{$v.c_name}></td>
                 <td><{$v.a_title}></td>
                 <td><{$v.a_hits}></td>
                 <td>
