--- a/app/Home/Views/Article/index.html
+++ b/app/Home/Views/Article/index.html
@@ -30,7 +30,7 @@
           </h3>
           <div class="autor">
           <span>作者：<{$v.a_owner}></span>
-          <span>分类：[<a href="/"><{$v.a_category}></a>]</span>
+          <span>分类：[<a href="/"><{$v.c_name}></a>]</span>
           <span>浏览（<a href="/"><{$v.a_hits}></a>）</span>
           <span>评论（<a href="/"><{$v.a_hits}></a>）</span>
           </div>
