--- a/app/Admin/Views/Category/modify.html
+++ b/app/Admin/Views/Category/modify.html
@@ -42,14 +42,29 @@
     <div class="tab-body"> <br />
       <div class="tab-panel active" id="tab-set">
         <form method="post" class="form-x" action="index.php?g=admin&c=category&a=update">
-          <input type="hidden" name='c_id' value='<{$data.c_id}>'>
+          <input type="hidden" name='c_id' value='<{$one.c_id}>'>
 
           <div class="form-group">
             <div class="label">
               <label for="c_name">分类名称</label>
             </div>
             <div class="field">
-              <input type="text" class="input" id="c_name" name="c_name" size="50" value="<{$data.c_name}>" data-validate="required:请填写类别名称" />
+              <input type="text" class="input" id="c_name" name="c_name" size="50" value="<{$one.c_name}>" data-validate="required:请填写类别名称" />
+            </div>
+          </div>
+          <div class="form-group">
+          <div class="label">
+              <label for="pid">所属分类</label>
+            </div>
+            <div class="field">
+              <select class="input" id="pid" name="c_pid" style="width:20%">
+                <option value="0" >--顶级专区--</option>
+                <{foreach $data as $v}>
+                <{if $one.c_id eq $v.c_pid}><{continue}><{/if}>
+                <{if $one.c_id eq $v.c_pid}><{continue}><{/if}>
+                <option value="<{$v.c_id}>" <{if $one.c_pid eq $v.c_id}>selected<{/if}> ><{str_repeat('--',$v.lv)}><{$v.c_name}></option>
+                <{/foreach}>
+              </select>
             </div>
           </div>
           <div class="form-group">
@@ -57,7 +72,7 @@
               <label for="c_desc">描述</label>
             </div>
             <div class="field">
-              <textarea class="input" name="c_desc" id="c_desc" rows="5" cols="50" placeholder="描述" data-validate="required:请填写分类描述"><{$data.c_desc}></textarea>
+              <textarea class="input" name="c_desc" id="c_desc" rows="5" cols="50" placeholder="描述" data-validate="required:请填写分类描述"><{$one.c_desc}></textarea>
             </div>
           </div>
           <div class="form-group">
@@ -65,7 +80,7 @@
               <label for="c_sort">排序</label>
             </div>
             <div class="field">
-              <input type="text" class="input" id="c_sort" name="c_sort" size="50" value="<{$data.c_sort}>" data-validate="required:请填写分类排序" />
+              <input type="text" class="input" id="c_sort" name="c_sort" size="50" value="<{$one.c_sort}>" data-validate="required:请填写分类排序" />
             </div>
           </div>
           <div class="form-button">
