--- a/app/Home/Views/Article/show.html
+++ b/app/Home/Views/Article/show.html
@@ -77,9 +77,9 @@
     <div class="index_about">
       <h2 class="c_titile"><{$data.a_title}></h2>
       <p class="box_c"><span class="d_time">发布时间：<{$data.a_last_time|date_format:'Y-m-d H:i:s'}></span>
-      <span>编辑：<{$data.a_owner}></span>
+      <span>编辑：<{$data.u_name}></span>
       <span>浏览（<{nocache}><{$data.a_hits}>）</span>
-      <span>评论览（<{$data.a_hits}>）<{/nocache}></span></p>
+      <span>评论览（<{$recordNums}>）<{/nocache}></span></p>
       <ul class="infos">
        <{$data.a_content}>
       </ul>
@@ -87,7 +87,7 @@
         <p><span>关键字词</span>：黑色,个人博客,时间轴,响应式</p>
       </div>
       <div class="nextinfo">
-     <!--  <{nocache}>
+<!--      <{nocache}>
         <{if $prev==false}>
         <p>上一篇：<a href="javascript:void();">没有了</a></p>
         <{else}>
@@ -113,11 +113,23 @@
       </div>
 
     <div style="clear:both; height:10px;"></div>
-    <h2>评论列表</h2>
-      <{nocache}>
-      <{$bucket}>
-      <{/nocache}>
-
+      <div class="otherlink">
+      <h2>评论列表</h2>
+      </div>
+         <ul class="pl_n">
+            <{nocache}>
+                <{foreach $record as $v}>
+                    <dl>
+                        <dt><img  src="<{$v['u_avatar']}>"></dt>
+                        <dd>&nbsp;</dd>
+                        <dd>
+                            <time><{$v['u_nickname']}>：</time><{$v['r_content']}>
+                            <time> <{$v['r_time']}></time>
+                        </dd>
+                    </dl>
+                <{/foreach}>
+            <{/nocache}>
+        </ul>
 
     <div style="clear:both; height:10px;"></div>
      <div class="otherlink">
@@ -131,12 +143,13 @@
     <div style="clear:both; height:10px;"></div>
 
     <div class="ds-replybox">
-        <form action="index.php?c=Article&a=addcomment" method="post">
+        <form action="index.php?g=home&c=Article&a=addRecord" method="post">
         <input type='hidden' name='userid' value='{$smarty.session.user.id|default:0}' />
-        <input type='hidden' name='id' value='<{$data.a_id}>' />
-        <input type='hidden' name='pid' value='0' />
+        <input type='hidden' name='r_a_id' value='<{$data.a_id}>' />
+        <input type='hidden' name='r_pid' value='0' />
+        <{if isset($smarty.session.userInfo)}>
         <textarea placeholder="说点什么吧…" title="Ctrl+Enter快捷提交" name="content"></textarea><pre class="ds-hidden-text"></pre>
-        </div>
+    </div>
         <div class="ds-post-toolbar">
         <div class="ds-post-options ds-gradient-bg"><span class="ds-sync"></span>
         </div>
@@ -144,6 +157,18 @@
         <div class="ds-toolbar-buttons"><a title="插入表情" class="ds-toolbar-button ds-add-emote"></a>
         </div>
         </div>
+        <{else}>
+        <textarea placeholder="请先登录再评论... 单击登录" title="Ctrl+Enter快捷提交" name="content" disabled></textarea><pre class="ds-hidden-text"></pre>
+    </div>
+        <div class="ds-post-toolbar">
+        <div class="ds-post-options ds-gradient-bg"><span class="ds-sync"></span>
+        </div>
+        <button type="button" class="ds-post-button" onclick="window.location.href='index.php' " >登录</button>
+        <div class="ds-toolbar-buttons"><a title="插入表情" class="ds-toolbar-button ds-add-emote"></a>
+        </div>
+        </div>
+        <{/if}>
+
         </form>
       </div>
   </article>
