--- a/app/Home/Views/Index/index.html
+++ b/app/Home/Views/Index/index.html
@@ -30,25 +30,28 @@
         <p><span>推荐</span>文章</p>
       </h2>
       <{nocache}>
+      <{if isset($data)}>
+
       <{foreach $data as $v}>
       <div class="blogs">
         <h3><a href="index.php?g=home&c=article&a=show&a_id=<{$v.a_id}>"><{$v.a_title}></a></h3>
-        <figure>
-        <!-- <img src="<{constant('DIR_THUMBER')}>/<{$v.a_thumber}>" ></figure> -->
+        <figure><img src="./Upload/thumber/<{$v.a_thumb}>" ></figure>
         <ul>
           <p><{$v.a_desc|truncate:20:'...'}></p>
           <a href="index.php?g=home&c=article&a=show&a_id=<{$v.a_id}>" target="_blank" class="readmore">阅读全文&gt;&gt;</a>
         </ul>
         <p class="autor">
-        <span >作者：<{$v.u_name}></span> </p><br/>
-        <span >分类：【<a href="/"><{$v.c_name}></a>】</span><br/>
-        <span >浏览（<a href="/"><{$v.a_hits}></a>）</span><br/>
-        <span >评论（<a href="/"><{$v.recordNums}></a>）</span>
+          <span >作者：<{$v.u_name}></span>
+          <span >分类：【<a href="/"><{$v.c_name}></a>】</span>
+          <span >浏览（<a href="/"><{$v.a_hits}></a>）</span>
+          <span >评论（<a href="/"><{$v.recordNums}></a>）</span>
+        </p>
 
         <div class="dateview"><{$v.a_create_time|date_format:'Y-m-d'}>
         </div>
       </div>
       <{/foreach}>
+      <{/if}>
       <{/nocache}>
     </div>
   </article>
@@ -80,7 +83,7 @@
       </h2>
       <ul>
 
-        <{foreach $data as $v }>
+        <{foreach $top as $v }>
         <li><a href="index.php?g=home&c=article&a=show&a_id=<{$v.a_id}>"><{$v.a_title|truncate:15:'...':true }></a></li>
         <{/foreach}>
 
