Signed-off-by: ljb729613920 <liujiabin1212@outlook.com>

--- a/app/Home/Views/Article/index.html
+++ b/app/Home/Views/Article/index.html
@@ -44,10 +44,10 @@
 					<a href="index.php?g=home&c=article&a=show&a_id=<{$v.a_id}>"><{$v.a_title}></a>
 					</h3>
 					<div class="autor">
-					<span>作者：<{$v.a_owner}></span>
+					<span>作者：<{$v.u_nickname}></span>
 					<span>分类：[<a href="/"><{$v.c_name}></a>]</span>
 					<span>浏览（<a href="/"><{$v.a_hits}></a>）</span>
-					<span>评论（<a href="/"><{$v.a_hits}></a>）</span>
+					<span>评论（<a href="/"><{$v.records}></a>）</span>
 					</div>
 					<p><{$v.a_desc|truncate:20:'...':true}> <a href="index.php?g=home&c=article&a=show&a_id=<{$v.a_id}>" target="_blank" class="readmore">全文</a></p>
 				</ul>
