--- a/app/Home/Views/Index/index.html
+++ b/app/Home/Views/Index/index.html
@@ -41,13 +41,13 @@
           <a href="index.php?g=home&c=article&a=show&a_id=<{$v.a_id}>" target="_blank" class="readmore">阅读全文&gt;&gt;</a>
         </ul>
         <p class="autor">
-          <span >作者：<{$v.u_name}></span>
+          <span >作者：<{$v.u_nickname}></span>
           <span >分类：【<a href="/"><{$v.c_name}></a>】</span>
           <span >浏览（<a href="/"><{$v.a_hits}></a>）</span>
           <span >评论（<a href="/"><{$v.recordNums}></a>）</span>
         </p>
 
-        <div class="dateview"><{$v.a_create_time|date_format:'Y-m-d'}>
+        <div class="dateview"><{$v.a_last_time|date_format:'Y-m-d'}>
         </div>
       </div>
       <{/foreach}>
