Signed-off-by: ljb729613920 <liujiabin1212@outlook.com>

--- a/app/Home/Views/Article/index.html
+++ b/app/Home/Views/Article/index.html
@@ -31,10 +31,10 @@
 <body>
 <div class="ibody">
 
-	<{include file="../common/menu.html" active=$c_id menu=$menu  }>
+	<{include file="../common/menu.html" active=$c_id }>
 
 	<article>
-		<h2 class="about_h">您现在的位置是：<a href="/">首页</a>><a href="1/">
+		<h2 class="about_h">您现在的位置是：<a href="index.php?g=home&c=index&a=index">首页</a>><a href="1/">
 		</a></h2>
 		<div class="bloglist">
 			<{foreach $data as $v}>
