--- a/app/Admin/Views/Privilege/login.html
+++ b/app/Admin/Views/Privilege/login.html
@@ -44,7 +44,7 @@
                     <div class="form-group">
                         <div class="field">
                             <input type="text" class="input" name="passcode" placeholder="填写右侧的验证码" data-validate="required:请填写右侧的验证码" />
-                            <img src="/admin/privilege/captcha" width="80" height="32" class="passcode" onclick="this.src='/admin/privilege/captcha/'+Math.random()"/>
+                            <img src="index.php?g=admin&c=privilege&a=captcha" width="80" height="32" class="passcode" onclick="this.src='index.php?g=admin&c=privilege&a=captcha&'+Math.random()"/>
                         </div>
                     </div>
                 </div>
