--- a/app/Home/Views/Index/index.html
+++ b/app/Home/Views/Index/index.html
@@ -16,7 +16,7 @@
 <body>
 <div class="ibody">
 
-  <{include file="../common/menu.html" active="0" menu=$menu}>
+  <{include file="../common/menu.html" active="0" }>
 
   <article>
     <div class="banner">
@@ -37,7 +37,7 @@
         <h3><a href="index.php?g=home&c=article&a=show&a_id=<{$v.a_id}>"><{$v.a_title}></a></h3>
         <figure><img src="./Upload/thumber/<{$v.a_thumb}>" ></figure>
         <ul>
-          <p><{$v.a_desc|truncate:20:'...'}></p>
+          <p><{$v.a_desc|truncate:80:'...':true}></p>
           <a href="index.php?g=home&c=article&a=show&a_id=<{$v.a_id}>" target="_blank" class="readmore">阅读全文&gt;&gt;</a>
         </ul>
         <p class="autor">
@@ -75,7 +75,7 @@
       </h2>
       <ul>
         <{foreach $news as $v }>
-        <li><a href="index.php?g=home&c=article&a=show&a_id=<{$v.a_id}>"><{$v.a_title|truncate:15:'...':true }></a></li>
+        <li><a href="index.php?g=home&c=article&a=show&a_id=<{$v.a_id}>"><{$v.a_title|truncate:20:'...':true }></a></li>
         <{/foreach}>
       </ul>
       <h2>
@@ -84,7 +84,7 @@
       <ul>
 
         <{foreach $top as $v }>
-        <li><a href="index.php?g=home&c=article&a=show&a_id=<{$v.a_id}>"><{$v.a_title|truncate:15:'...':true }></a></li>
+        <li><a href="index.php?g=home&c=article&a=show&a_id=<{$v.a_id}>"><{$v.a_title|truncate:20:'...':true }></a></li>
         <{/foreach}>
 
       </ul>
